# target-s3

./: .gitignore  README.md  meltano.yml  pyproject.toml
target_s3/: sinks.py  target.py
target_s3/tests/: test_core.py
