[tool.poetry]
name = "target-s3"
version = "0.0.1"
description = "`target-s3` is a Singer target for s3, built with the Meltano Singer SDK."
authors = ["John Kaustinen"]
keywords = [
    "ELT",
    "s3",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.7.1"
requests = "^2.28.1"
singer-sdk = { version="^0.17.0"}
fs-s3fs = { version = "^1.1.1", optional = true}
pyarrow = "^10.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
flake8 = "^3.9.2"
black = "^22.12.0"
pydocstyle = "^6.2.1"
mypy = "^0.991"
types-requests = "^2.28.11.7"
isort = "^5.11.4"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "target_s3"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-s3 = 'target_s3.target:Targets3.cli'
